# entsoeAPI

./: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
src/entsoe/: __init__.py  consts.py  entsoe.py  exceptions.py  forex.py  xmlreader.py
