[metadata]
name = entsoe-daily
version = 0.0.2
author = Ole-Magnus Pedersen
author_email = pedersen.olemagnus@gmail.com
description = Simple package to get day-ahead electricity prices from entsoe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olemagnp/entsoe-daily

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src